[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet quadratic funding'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-quadratic-funding-runtime-api'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.1'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-09+1'
version = '4.0.0-dev'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-09+1'
version = '4.0.0-dev'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-09+1'
version = '4.0.0-dev'

[dependencies.pallet-quadratic-funding]
path='../'
version = '4.0.0-dev'
default-features = false

[features]
default = ['std']
std = [
    'sp-api/std',
    'codec/std',
    'sp-runtime/std',
    'sp-std/std',
    'pallet-quadratic-funding/std',
]
