[package]
name = "pallet-quadratic-funding-runtime-api"
version = "2.0.1"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
sp-api = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1', default-features = false}
codec = { package = "parity-scale-codec", version = "2.0.0", features=['derive'], default-features = false }
sp-runtime = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1', default-features = false}
sp-std = { version='4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1', default-features = false }

[dev-dependencies]
serde_json = "1.0"

[dependencies.pallet-quadratic-funding]
path='../'
version = '4.0.0-dev'
default-features = false

[features]
default = ['std']
std = [
    'sp-api/std',
    'codec/std',
    'sp-runtime/std',
    'sp-std/std',
    'pallet-quadratic-funding/std',
]
